clusters/main/kubernetes/system/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: fiveoseven
    cert-manager.io/private-key-rotation-policy: Always

    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Longhorn administration UI
    gethomepage.dev/group: Administration
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/name: Longhorn Dashboard
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: internal
  rules:
  - host: longhorn.${LOCAL_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
  - hosts:
    - longhorn.${LOCAL_DOMAIN}
    secretName: longhorn-tls-0
